--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "safetyCharts"]
+	path = safetyCharts
+	url = https://github.com/safetygraphics/safetycharts
+	shallow = true
+	registered = true
+[submodule "safetyGraphics"]
+	path = safetyGraphics
+	url = https://github.com/safetygraphics/safetygraphics
+	shallow = true
+	registered = true
